# smonten-chess-gui

./: .gitignore
chess-gui/: Cargo.toml
chess-gui/src/: chess.rs  lib.rs  main.rs  networking.rs
