[package]
name = "chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess_lib = { git = "https://github.com/INDA22PlusPlus/smonten-chess/" }
ggez = "0.8.0-rc0"
glam = { version = "0.20", features = ["mint"] }
prost = "0.11.0"
tokio = "1.21.2"